--- a/ex001/index.html
+++ b/ex001/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evera</title>
+    <link rel="shortcut icon" href="logo.svg" type="image/x-icon" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -73,16 +74,22 @@
     </header>
 
     <main>
-      <div class="typewriter-container">
-        <h1 class="h1-typewriter">
-          <span class="static-text">Não Movemos Capital, Movemos </span><br />
-          <span class="animated-text">.</span><span class="cursor">|</span>
-        </h1>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt
-          nesciunt, autem natus similique quo, nulla doloremque minus quae est
-          reprehenderit, quia illo sequi eligendi possimus.
-        </p>
+      <div class="grid-main-container">
+        <div class="typewriter-container">
+          <h1 class="h1-typewriter">
+            <span class="static-text">Não Movemos Capital, Movemos </span><br />
+            <span class="animated-text">.</span><span class="cursor">|</span>
+          </h1>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt
+            nesciunt, autem natus similique quo, nulla doloremque minus quae est
+            reprehenderit, quia illo sequi eligendi possimus.
+          </p>
+
+          <button>Mais informações</button>
+        </div>
+
+        <img src="img-header.jpg" alt="Image" class="img-main" />
       </div>
     </main>
 
