--- a/ex001/index.html
+++ b/ex001/index.html
@@ -153,6 +153,192 @@
           </div>
         </div>
       </div>
+
+      <div class="bg-div">
+        <section class="testimony__container container">
+          <div class="testimony__photo">
+            <img
+              src="./image/img-header.jpg"
+              alt="Marcos Paiva"
+              class="testimony__img"
+            />
+            <div class="testimony__author">
+              <strong class="testimony__name">Marcos Paiva</strong>
+              <p class="testimony__role">
+                CEO da Verde Asset Management<br />
+                Investidor Evera desde 2022
+              </p>
+            </div>
+          </div>
+
+          <figure class="testimony__content">
+            <blockquote class="testimony__quote">
+              “Eu invisto em venture e private equity há 18 anos e já vi
+              centenas de fundos. A Evera é, sem dúvida, a primeira gestora que
+              conseguiu alinhar retorno acima do mercado com impacto mensurável
+              de verdade.<br /><br />
+              Os projetos passam por uma due diligence técnica e ESG tão
+              rigorosa quanto qualquer Tier 1 tradicional, mas com a diferença
+              de que você vê a floresta crescendo, a comunidade mudando e o
+              carbono sendo realmente sequestrado.<br /><br />
+              Em 28 meses o meu portfólio com eles já bateu
+              <strong>14,7% a.a. líquido</strong> — e eu durmo tranquilo sabendo
+              que meu capital está construindo o futuro que meus filhos vão
+              herdar.”
+            </blockquote>
+
+            <figcaption class="testimony__caption">
+              <span class="testimony__highlight">Marcos Paiva</span> · CEO da
+              Verde Asset Management
+            </figcaption>
+          </figure>
+        </section>
+      </div>
+
+      <section class="faq">
+        <div class="faq__container container">
+          <div class="faq__intro">
+            <h2>Perguntas frequentes</h2>
+            <p>
+              Respostas diretas às dúvidas mais comuns de investidores que estão
+              avaliando a Evera.
+            </p>
+
+            <p class="faq__contact">
+              Ainda ficou com dúvida? Fale direto com o time no
+              <a href="mailto:invest@evera.com.br">invest@evera.com.br</a>
+            </p>
+          </div>
+
+          <div class="faq__accordion">
+            <ul class="accordion">
+              <li class="accordion__item">
+                <input
+                  type="radio"
+                  name="accordion"
+                  id="faq1"
+                  class="accordion__input"
+                />
+                <label for="faq1" class="accordion__label">
+                  Qual o investimento mínimo para começar?
+                </label>
+                <div class="accordion__content">
+                  <p>
+                    O aporte mínimo é de <strong>R$ 25.000</strong> por projeto
+                    (alguns projetos selecionados aceitam a partir de R$
+                    10.000). Não existe taxa de entrada nem de performance para
+                    o investidor pessoa física.
+                  </p>
+                </div>
+              </li>
+
+              <li class="accordion__item">
+                <input
+                  type="radio"
+                  name="accordion"
+                  id="faq2"
+                  class="accordion__input"
+                />
+                <label for="faq2" class="accordion__label">
+                  Quanto tempo o dinheiro fica aplicado?
+                </label>
+                <div class="accordion__content">
+                  <p>
+                    A maioria dos projetos tem duração de
+                    <strong>36 a 60 meses</strong>. Você recebe relatórios
+                    trimestrais e pode acompanhar a evolução do impacto e do
+                    retorno em tempo real no portal do investidor.
+                  </p>
+                </div>
+              </li>
+
+              <li class="accordion__item">
+                <input
+                  type="radio"
+                  name="accordion"
+                  id="faq3"
+                  class="accordion__input"
+                />
+                <label for="faq3" class="accordion__label">
+                  O impacto ambiental e social é realmente auditado?
+                </label>
+                <div class="accordion__content">
+                  <p>
+                    Sim. Todos os indicadores de impacto são verificados por
+                    auditoria externa independente (ex: SGS, Bureau Veritas ou
+                    similar) e seguem os padrões do <strong>GIIN</strong> e do
+                    <strong>Operating Principles for Impact Management</strong>
+                    do IFC/World Bank.
+                  </p>
+                </div>
+              </li>
+
+              <li class="accordion__item">
+                <input
+                  type="radio"
+                  name="accordion"
+                  id="faq4"
+                  class="accordion__input"
+                />
+                <label for="faq4" class="accordion__label">
+                  Qual o retorno financeiro esperado?
+                </label>
+                <div class="accordion__content">
+                  <p>
+                    Nossos projetos concluídos entregaram entre
+                    <strong>10,4% e 16,8% a.a. líquido de IR</strong>
+                    (dependendo do projeto e do prazo). A meta interna é sempre
+                    superar CDI + 400–600 bps com impacto positivo real.
+                  </p>
+                </div>
+              </li>
+
+              <li class="accordion__item">
+                <input
+                  type="radio"
+                  name="accordion"
+                  id="faq5"
+                  class="accordion__input"
+                />
+                <label for="faq5" class="accordion__label">
+                  Existe risco de perda do capital?
+                </label>
+                <div class="accordion__content">
+                  <p>
+                    Como todo investimento privado, existe risco. Fazemos
+                    mitigação com garantias reais (alienação fiduciária de
+                    terras, contratos de venda de carbono, seguros etc). Até
+                    hoje <strong>não houve perda de principal</strong> em nenhum
+                    projeto concluído.
+                  </p>
+                </div>
+              </li>
+
+              <li class="accordion__item">
+                <input
+                  type="radio"
+                  name="accordion"
+                  id="faq6"
+                  class="accordion__input"
+                />
+                <label for="faq6" class="accordion__label">
+                  Posso investir com isenção ou diferimento de IR?
+                </label>
+                <div class="accordion__content">
+                  <p>
+                    Sim! Vários dos nossos projetos enquadram-se na
+                    <strong
+                      >Lei 14.801/2024 (antiga Lei do Bem Ambiental)</strong
+                    >
+                    e permitem diferimento ou isenção total de IR para pessoa
+                    física por até 8 anos, dependendo da estrutura.
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
