--- a/ex001/index.html
+++ b/ex001/index.html
@@ -195,6 +195,29 @@
         </section>
       </div>
 
+      <div class="container-bg-image">
+        <div class="container-text">
+          <h2>
+            Subir a motanha certa<br />
+            faz toda a diferença
+          </h2>
+          <p>
+            Não se trata apenas de chegar ao topo com mais dinheiro.<br />
+            Trata-se de olhar para trás e ver florestas que não existiam,<br />
+            comunidades que agora têm água potável<br />
+            e um planeta que respira melhor por causa do seu capital.
+          </p>
+          <div class="cta-group">
+            <a href="#investir" class="btn-primary"
+              >Quero fazer parte dessa subida</a
+            >
+            <a href="#projetos" class="btn-secondary"
+              >Conhecer os projetos atuais</a
+            >
+          </div>
+        </div>
+      </div>
+
       <section class="faq">
         <div class="faq__container container">
           <div class="faq__intro">
