--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <section class="testimony__container container">
           <div class="testimony__photo">
             <img
-              src="./image/img-header.jpg"
+              src="./image/person.jpg"
               alt="Marcos Paiva"
               class="testimony__img"
             />
@@ -367,7 +367,6 @@
     <footer class="footer">
       <div class="footer__container container">
         <div class="footer__grid">
-          <!-- Coluna 1: Evera -->
           <div class="footer__column">
             <h3 class="footer__title">Evera</h3>
             <ul class="footer__list">
@@ -378,7 +377,6 @@
             </ul>
           </div>
 
-          <!-- Coluna 2: Investidores -->
           <div class="footer__column">
             <h3 class="footer__title">Para investidores</h3>
             <ul class="footer__list">
@@ -389,7 +387,6 @@
             </ul>
           </div>
 
-          <!-- Coluna 3: Recursos -->
           <div class="footer__column">
             <h3 class="footer__title">Recursos</h3>
             <ul class="footer__list">
@@ -400,7 +397,6 @@
             </ul>
           </div>
 
-          <!-- Coluna 4: Contato -->
           <div class="footer__column">
             <h3 class="footer__title">Contato</h3>
             <ul class="footer__list">
